--- a/turan.tex
+++ b/turan.tex
@@ -760,6 +760,7 @@ configurations of points:
 
 
 \subsection{Montone Matrices, Tripod Packing, and 2-Comparable Sets}
+\seclabel{tripods}
 
 Determining the asymptotics of $\ex(n,\{\taco,\nested\})$ was given explicitly as open problem in the conclusion of Bra\ss's paper.  We spent more than a year work on this problem and this work included computer searches for solutions for small values of $n$.  Using the results of these computer searches in the Online Encyclopedia of Integer Sequences, we discovered that this problem is (asymptotically) equivalent to several other known problems.
 
